# camera-capture

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  config.rs  image_processing.rs  main.rs  mqtt.rs
